--- a/front/busqueda/search.html
+++ b/front/busqueda/search.html
@@ -8,7 +8,7 @@
   <title>Buscar</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="search.css">
+  <link rel="stylesheet" href="../../public/css/search.css">
 </head>
 
 <body>
@@ -38,13 +38,13 @@
       <div id="carouselExampleAutoplaying" class="carousel slide carrusel" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/laCuencaDelPlata.jpg" class="d-block w-100" alt="La cuenca del plata">
+            <img src="../../public/img/home/laCuencaDelPlata.jpg" class="d-block w-100" alt="La cuenca del plata">
           </div>
           <div class="carousel-item">
-            <img src="img/siglo21.png" class="d-block w-100" alt="Siglo 21">
+            <img src="../../public/img/home/siglo21.png" class="d-block w-100" alt="Siglo 21">
           </div>
           <div class="carousel-item">
-            <img src="img/UNAF.jpg" class="d-block w-100" alt="UNAF">
+            <img src="../../public/img/home/UNAF.jpg" class="d-block w-100" alt="UNAF">
           </div>
         </div>
         <button class="carousel-control-prev btn-next " type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -71,7 +71,7 @@
   </main>
   <script  src="main.js" type="module"></script>
   <script src="models/universidad.js" type="module"></script>
-  <script src="./JS/busqueda.js" type="module"></script>
+  <script src="../../public/js/busqueda.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
