--- a/src/front/Login/restorePSW.html
+++ b/src/front/Login/restorePSW.html
@@ -10,7 +10,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/public/css/restorePSW.css" />
+    <link rel="stylesheet" href="../../public/css/restorePSW.css" />
     <title>Olvidé mi contraseña</title>
   </head>
   <body>
